# app-gerenciador-de-emprestimos-igds

./: README.md  index.html  package-lock.json  package.json
src/: App.jsx  main.jsx  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: Layout.jsx  NavBar.jsx
src/pages/: Adicionar.jsx  Home.jsx  Listar.jsx  ListarDetalhes.jsx
